--- a/mgr/praca/podsumowanie.tex
+++ b/mgr/praca/podsumowanie.tex
@@ -1,12 +1,11 @@
 \chapter{Podsumowanie}
 
 W niniejszej pracy zademonstrowano urządzenie potrafiące określić swoje
-położenie i orientację wykorzystują do tego celu ultradźwięki.
-Mimo że wykorzystane fale mają długość równą \SI{8}{mm}  bez większego problemu
-udało się mierzyć położenie z rozdzielczością rzędu \SI{0,5}{mm} co dla 
+położenie jak i orientację wykorzystują do tego celu ultradźwięki.
+Mimo że wykorzystano fale dźwiękowe o długość \SI{8}{mm} pomiar położenia osiąga rozdzielczości rzędu \SI{0,5}{mm} co dla 
 pozycjonowania przestrzennego jest dużym osiągnięciem.
-Mimo wielu zalet prezentowane rozwiązanie posiada również szereg wad, w niniejszym rozdziale
-przedstawione zostaną za i przeciw zastosowanego rozwiązania.
+Prezentowane rozwiązanie cechuje się pewnymi zaletami jednak posiada również szereg wad,
+które 
 
 Zalety:
 \begin{itemize}
@@ -14,11 +13,11 @@ Zalety:
  próbkowania od częstotliwości nadawanego sygnału, jak i zastosowane wyszukiwanie wzorca pozwoliło
  wielokrotnie zwiększyć rozdzielczość pomiaru w stosunku to długości wykorzystanej fali dźwiękowej.
  
- \item Praktycznie nieograniczona przestrzeń pracy. Mimo, że prezentowanym prototypie
+ \item Praktycznie nieograniczona przestrzeń robocza. Mimo, że prezentowanym prototypie
  ograniczono przestrzeń roboczą do kwadratu \SI{2,5}{m} $\times$ \SI{2,5}{m} $\times$ \SI{2,5}{m},
  to jest to jedynie ograniczenie praktyczne i bez większych problemów można ją dowolnie zwiększyć. Trzeba jednak 
  pamiętać, że siła sygnały dźwiękowego maleje kwadratowo z odległością więc przy dużo większych odległościach
- niezbędny będzie nadajnik większej mocy. Większa powierzchnia pomiarowa wpływa również na czas odświeżania.
+ niezbędne będą nadajniki większej mocy. Większa powierzchnia pomiarowa wpływa również na dłuższy czas odświeżania.
 
  \item Niski koszt budowy. 
 \end{itemize}
@@ -31,30 +30,26 @@ Wady:
  co prawda w warunkach laboratoryjnych nie stanowi to większego problemu jednak w praktycznych zastosowaniach
  jest poważnym ograniczeniem.
  
- \item Długi czas odświeżania. Prezentowany prototyp dokonuje pomiary co \SI{350}{ms}, co daje około 3 pomiarów 
- na sekundę. Zauważmy, że mierząc cztery niezależne sygnały (z czterech głośników) każdy sygnał mierzony jest co \SI{87}{ms},
+ \item Długi czas odświeżania. Prezentowany prototyp dokonuje pomiary co \SI{350}{ms}, czyli około 3 pomiarów 
+ na sekundę. Zauważmy, że mierząc cztery niezależne sygnały (z czterech głośników) kolejny sygnał mierzony jest co \SI{87}{ms},
  co dla dźwięku poruszającego się z prędkością \SI{346}{m/s} pozwala na przebycie dystansu 29.7 metrów.
  Tak duży dystans w stosunku do powierzchni roboczej jest konieczny by zapobiec nakładaniu się sygnałów pochodzących z poprzednich
- pomiarów z nowymi (sygnał odbija się od ścian i wpływa na kolejne pomiary, czas rzędu \SI{87}{ms} pozwala 
- na całkowite rozproszenie sygnału).
- Można temu zaradzić nadając za każdym razem inny sygnał, następnie poszukiwany wzorzec należy odfiltrować z odebranego
- sygnału, to podejście nie jest jednak możliwe gdy za odbiorniki i nadajniki wykorzystujemy rezonatory piezoelektryczne
- (możliwości ich wysterowania są mocno ograniczone).
+ pomiarów z nowymi (nadany sygnał odbija się od ścian i wpływa na kolejne pomiary, czas rzędu \SI{87}{ms} pozwala 
+ na jego całkowite rozproszenie).
+ Można temu zaradzić nadając za każdym razem inny rozróżnialny sygnał, to podejście 
+ wymaga jednak nadajników i odbiorników o większych możliwościach wysterowania.
  
- \item Stosunkowo mały kąt widzenia. Zastosowane nadajniki piezoelektryczne są nadajnikami kierunkowymi, co 
+ \item Stosunkowo mały kąt widzenia. Zastosowane przetworniki piezoelektryczne są przetwornikami kierunkowymi, co 
  znacząco wpływa na maksymalny kąt pod jakim można ustawić nadajnik względem odbiornika. W prezentowanym 
- prototypie kąt ten nie powinien przekraczać \SI{45}{\degree}. Zastosowanie większej liczby nadajników lub inny ich rodzaj
- może znacząco zwiększyć ten kąt.
+ prototypie kąt ten nie powinien przekraczać \ang{45}. Zastosowanie większej liczby przetworników lub inny ich rodzaj
+ powinien znacząco zwiększyć ów kąt.
 
- \item [TODO] Ograniczone możliwości wysterowania rezonatorów piezoelektrycznych. 
- Zastosowane rezonatory nie nadają się do generowania krótkich impulsów, które znacząco uprościłyby mierzenie odległości.
- Dużo lepszym rozwiązaniem powinny być standardowe mikrofony i głośniki ultradźwiękowe, niestety są dużo droższe 
- i trudno dostępne.
+ \item Ograniczone możliwości wysterowania rezonatorów piezoelektrycznych. 
+ Zastosowane rezonatory nie nadają się do generowania krótkich impulsów, co znacząco uprościłyby mierzenie odległości.
  
- \item Problem z mierzeniem pozycji i orientacji w ruchu. Zauważmy, że w prezentowanym rozwiązaniu wyznaczane są odległości od
- kilku puntów, a pomiary są dokonywany w pewnych odstępach czasu. Jeśli mierzony obiekt się porusza to pomiar odległości w rożnych
- momentach w czasie powoduje przekłamania w pozycjonowaniu przestrzennym.
- 
+ \item Pomiar pozycji i orientacji nadajnika w ruchu. W prezentowanym urządzeniu jeden pomiar pozycji wraz z orientacją wymaga 
+ nadania czterech sygnałów w różnych odstępach czasowym. Jeśli podczas tego pomiaru nadajnik porusza się to 
+ poszczególne 
 \end{itemize}
 
 Jak widać, wykorzystanie dźwięków to określania pozycji i orientacji ma zdecydowanie więcej wad niż zalet,
