--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -39,7 +39,7 @@ urządzenia dodano śledzenie głowy przez zewnętrzną kamerę.
 
 \item
  wykorzystanie wielu zdjęć zawierających stałe (nie zmieniające się w czasie) obiekty, na postawie których wyznaczana jest pozycja kamery względem nich
-  lub odwrotnie, kamera (lub wiele kamer) jest punktem stałym, a wyznaczana jest pozycję obiektów -   
+  lub odwrotnie, kamera (lub wiele kamer) jest punktem stałym, a wyznaczana jest pozycja fotografowanych obiektów -   
  taką metodę wykorzystano w \textit{VidialSFM} \cite{bib:VisualSFM}, jak i w \textit{The Pi 3D scanner project} \cite{bib:pi3dscan}, 
  rozwiązanie to cechuje się również dość niską rozdzielczością.
  
@@ -65,13 +65,14 @@ Jeśli chodzi o stosunkowo długi czas odświeżania to
  głównym czynnikiem na niego wpływającym jest czas jaki potrzebuje fala dźwiękowa by się rozproszyć,
  tak by jej odbicia od powierzchni ścian nie wpływały na kolejne pomiary.
 
-Warto również wspomnieć o innych pracach, które w podobny sposób podchodzą do problemu pozycjonowania, przykładowo 
+Należy również wspomnieć o innych pracach, które w podobny sposób podchodzą do problemu pozycjonowania, przykładowo 
 w pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse} przedstawiono prototyp myszki 3D, której
 pozycja w przestrzeni wyznaczana jest za pomocą ultradźwięków, niemniej wykorzystany przez autorów algorytm wyznaczania 
 odległości jest dużo bardziej podatny na błędy. Dodatkowo praca koncentruje się jedynie
 na określaniu położenia myszki w przestrzeni, bez wyznaczania jej orientacji.
-Kolejnym ciekawym rozwiązaniem była rękawica dla graczy o nazwie \textit{Power Glove} \cite{bib:powerGlove} \cite{bib:powerGlove2} dla
-\textit{Nintendo Entertainment System} wydana w roku 1989, ona również wykorzystywała ultradźwięki do wyznaczania pozycji
-rękawicy w przestrzeni, jednak precyzja urządzenia była wyjątkowo słaba przez co rękawica nie odniosła znaczącego sukcesu komercyjnego.
+Kolejnym ciekawym rozwiązaniem jest rękawica dla graczy 
+\textit{Power Glove} \cite{bib:powerGlove} \cite{bib:powerGlove2} dla
+\textit{Nintendo Entertainment System} wydana w roku 1989, ona również wykorzystuje ultradźwięki do wyznaczania pozycji
+rękawicy w przestrzeni, jednak precyzja urządzenia jest wyjątkowo niska przez co rękawica nie odniosła znaczącego sukcesu komercyjnego.
 
 
