--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -23,13 +23,13 @@
 \author{Paweł Stawicki}
 \nralbumu{189254}
 
-\title{Wyznaczanie pozycji oraz orientacji w przestrzeni za pomocą ultradźwięków, skaner 3D}
-\tytulang{Determining position and orientation in space using ultrasound, 3D scanner}
+\title{Wyznaczanie pozycji oraz orientacji w przestrzeni za pomocą ultradźwięków}
+\tytulang{Determining position and orientation in space using ultrasound}
 
 \kierunek{Informatyka}
 \opiekun{dra Marcina Peczarskiego}
 
-\date{Czerwiec 2014}
+\date{Czerwiec 2015}
 
 %Podać dziedzinę wg klasyfikacji Socrates-Erasmus:
 \dziedzina{ 
@@ -51,7 +51,7 @@ TODO: dodać
 }
 
 % S?owa kluczowe:
-\keywords{TODO: dodać}
+\keywords{położenie, orientacja, 3D, ultradźwięki}
 
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
