--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -20,7 +20,7 @@ Schemat połączeń przedstawiono na rysunku \ref{fig:nadajnik_schemat}.
     \label{fig:nadajnik_schemat}
 \end{figure}
 
-Całość umieszczona została w ramie w kształcie litery H wykonanej z rurek PCV.
+Całość umieszczona została na ramie w kształcie litery H wykonanej z rurek PCV.
 Rezonatory zostały dodatkowo odizolowane od ramy rzepami co ułatwia ich demontaż jak i skutecznie
 zapobiega przenoszeniu się drgań. 
 
@@ -53,10 +53,10 @@ Rysunek \ref{fig:output_signal} przedstawia sygnał jakim wysterowany jest przet
 \section{Dobór rezonatorów piezoelektrycznych}
 
 Głównym problemem podczas konstrukcji nadajnika okazał się dobór odpowiednich rezonatorów piezoelektrycznych.
-Mimo, że producent wykorzystanych rezonatorów piezoelektrycznych zapewnia ich pracę zakresie: \SI{40}{kHz} $\pm$ \SI{1}{kHz}, to taki rozrzut okazał się niewystarczający, 
+Mimo, że producent wykorzystanych rezonatorów piezoelektrycznych zapewnia ich pracę zakresie: \SI{40}{kHz} $\pm$ \SI{1}{kHz},
+to taki rozrzut okazał się zbyt duży, 
 dlatego z 30 rezonatorów (15 nadajników i 15 odbiorników) wybrane zostały 4 nadajniki i 3 odbiorniki o najbardziej 
-zbliżonych częstotliwościach rezonansowych. Częstotliwości zostały zmierzone na oscyloskopie cyfrowym, są to odpowiedzi 
-rezonatora na krótki impuls elektryczny.
+zbliżonych częstotliwościach rezonansowych.
 
 Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości, gwiazdką oznaczono wykorzystane przetworniki piezoelektryczne.
 
