--- a/mgr/praca/abstract.tex
+++ b/mgr/praca/abstract.tex
@@ -1,9 +1,9 @@
 \begin{abstract}
-W pracy przedstawiono prototyp urządzenia potrafiącego określić swoje
-położenie jak i orientację w przestrzeni. Urządzenie składa się z dwóch części:
-nadajnika, którego pozycja i orientacja jest wyznaczana oraz odbiornika, który 
+W pracy przedstawiono prototyp urządzenia potrafiącego określić zarówno swoje
+położenie, jak i orientację w przestrzeni. Urządzenie składa się z dwóch części:
+nadajnika, którego pozycja i orientacja jest wyznaczana, oraz odbiornika, który 
 stanowi stały punkt odniesienia. Wyznaczanie położenia odbywa się za 
-pomocą pomiarów odległości pomiędzy nadajnikiem, a odbiornikiem wykorzystując 
-do tego celu ultradźwięki o częstotliwości \SI{40}{kHz}. 
+pomocą pomiarów odległości pomiędzy nadajnikiem a odbiornikiem -- wykorzystuje  się
+do tego ultradźwięki o częstotliwości \SI{40}{kHz}. 
 Zastosowana metoda umożliwia pomiar z wysoką rozdzielczością dochodzącą do \SI{0.5}{mm}.
 \end{abstract}
